2007-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Created VCWidget master class for other VC widgets
	* Changed VCLabel and VCFrame to inherit VCWidget

2007-Sep-12  Heikki Junnila <hjunnila@users.sf.net>
	* Modified VCButton to incorporate new XML scheme.
	* Fixed keybind & sliderkeybind saving

2007-Sep-11  Heikki Junnila <hjunnila@users.sf.net>
	* VC widgets continued...

2007-Sep-10  Heikki Junnila <hjunnila@users.sf.net>
	* VC widgets continued...

2007-Sep-09  Heikki Junnila <hjunnila@users.sf.net>
	* Started to move from the weird shared menu system in VC
	  to individually-managed menus for each widget.
	* -> TODO: A common base class for VC widgets that contains
	  the shared stuff. BUT the base class MUST NOT inherit QObject
	  because QT doesn't like it. This seems to be quite
	  difficult actually...

2007-Sep-08  Heikki Junnila <hjunnila@users.sf.net>
	* VC widgets continued...

2007-Sep-06  Heikki Junnila <hjunnila@users.sf.net>
	* VCProperties dialog no longer uses Settings class for load/save.
	* Implemented appearance saving for VCLabel.

2007-Sep-05  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented preliminary XML saving for some VC widgets.

2007-Aug-29  Heikki Junnila <hjunnila@users.sf.net>
	* Converted .deviceclass' to .qxf's.
	* Created fixtures directory.
	* Removed devices directory.
	* Implemented mode cloning for fixture editor.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented channel copying for fixture editor.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Fixture console gets deleted again when its fixture is deleted.
	* New fixtures are selected immediately in fixture manager.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented window & splitter state save/load to Fixture Manager.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented font & frequency save/load to Monitor.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>